--- a/sample_sensor_kit_description/config/sensor_kit_calibration.yaml
+++ b/sample_sensor_kit_description/config/sensor_kit_calibration.yaml
@@ -20,7 +20,7 @@ sensor_kit_base_link:
     roll: 0.0
     pitch: 0.0
     yaw: 0.0
-  lider_link:
+  lidar_link:
     x: 1.225
     y: 0.0
     z: 1.28
