--- a/sample_sensor_kit_description/config/sensors_calibration.yaml
+++ b/sample_sensor_kit_description/config/sensors_calibration.yaml
@@ -1,15 +1,29 @@
 base_link:
-  sensor_kit_base_link:
-    x: 0.9
+  gps0/gps_base_link:
+    x: -1.225
     y: 0.0
-    z: 2.0
-    roll: -0.001
-    pitch: 0.015
-    yaw: -0.0364
-  velodyne_rear_base_link:
-    x: -0.358
+    z: -0.11
+    roll: 0.0
+    pitch: 0.0
+    yaw: 0.0
+  gps1/gps_base_link:
+    x: -1.000
     y: 0.0
-    z: 1.631
-    roll: -0.02
-    pitch: 0.7281317
-    yaw: 3.141592
+    z: 1.28
+    roll: 0.0
+    pitch: 0.0
+    yaw: 0.0
+  imu_base_link:
+    x: -0.420
+    y: 0.0
+    z: -1.180
+    roll: 0.0
+    pitch: 0.0
+    yaw: 0.0
+  cl_base_link:
+    x: 0.2
+    y: 0.0
+    z: -0.11
+    roll: 0.0
+    pitch: 0.0
+    yaw: 0.0
